--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 !prismadb.js
 # These will be compiled/generated locally & on deployment #####
 ################################################################
+.env
+node_modules
