Baseline DB and add actions to handle updates (#8)
* S9 Changes

* chore: baseline DB at 2025-09-07 for S9

* remove node stuff and update gitignore to prevent in future

* moved preS9 migrations to archive

* add workflow files

* updated plan file to fix comments

* prevent multiple deploys running at once

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 !prismadb.js
 # These will be compiled/generated locally & on deployment #####
 ################################################################
+.env
+node_modules
+package.json
