--- a/.github/workflows/db-deploy.yml
+++ b/.github/workflows/db-deploy.yml
@@ -48,11 +48,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-prod
     permissions:
-      contents: write       # create tags + releases
-      pull-requests: read   # read PR body/labels
+      contents: write # create tags + releases
+      pull-requests: read # read PR body/labels
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
+
+      - name: Fetch all tags
+        run: git fetch --tags --force
+
+      - name: Highest existing tag (normalize)
+        id: last
+        shell: bash
+        run: |
+          # accept v-prefixed and bare semver tags, normalize by stripping leading v
+          list=$(git tag -l 'v[0-9]*.[0-9]*.[0-9]*' '[0-9]*.[0-9]*.[0-9]*' \
+                | sed 's/^v//' | sort -V)
+          last=$(echo "$list" | tail -n1)
+          [ -z "$last" ] && last="0.0.0"
+          echo "last=v$last" >> "$GITHUB_OUTPUT"
 
       # 1) Find the merged PR and parse "Release Version: vX.Y.Z" from the body
       - name: Read version from PR body (optional)
@@ -61,12 +75,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const owner = context.repo.owner;
-            const repo  = context.repo.repo;
-            const sha   = context.sha;
-
             const prs = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner, repo, commit_sha: sha
+              owner: context.repo.owner, repo: context.repo.repo, commit_sha: context.sha
             });
             let requested = '';
             if (prs.data.length) {
@@ -78,7 +88,7 @@ jobs:
             }
             core.setOutput('requested', requested);
 
-      # 2) If PR specified a version, validate it's > last tag and unused
+      # 2) If PR specified a version, validate it's > highest tag and unused
       - name: Validate requested version
         id: validate
         if: steps.prver.outputs.requested != ''
@@ -86,21 +96,17 @@ jobs:
         run: |
           set -e
           req="${{ steps.prver.outputs.requested }}"
-          last="$(git describe --tags --abbrev=0 2>/dev/null || echo 'v0.0.0')"
-
+          last="${{ steps.last.outputs.last }}"
           # strip 'v' and split
           req_n="${req#v}"; last_n="${last#v}"
           IFS=. read -r rqM rqN rqP <<<"$req_n"
           IFS=. read -r lsM lsN lsP <<<"$last_n"
-
           # compare req > last
           if [ "$rqM" -lt "$lsM" ] || { [ "$rqM" -eq "$lsM" ] && [ "$rqN" -lt "$lsN" ]; } || \
-             { [ "$rqM" -eq "$lsM" ] && [ "$rqN" -eq "$lsN" ] && [ "$rqP" -le "$lsP" ]; }; then
+            { [ "$rqM" -eq "$lsM" ] && [ "$rqN" -eq "$lsN" ] && [ "$rqP" -le "$lsP" ]; }; then
             echo "Requested version $req must be greater than last tag $last"; exit 1; fi
-
           if git rev-parse "$req" >/dev/null 2>&1; then
             echo "Tag $req already exists"; exit 1; fi
-
           echo "next=$req" >> "$GITHUB_OUTPUT"
 
       # 3) Otherwise decide bump from PR labels (then default to patch)
@@ -111,12 +117,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const owner = context.repo.owner;
-            const repo  = context.repo.repo;
-            const sha   = context.sha;
-
             const prs = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner, repo, commit_sha: sha
+              owner: context.repo.owner, repo: context.repo.repo, commit_sha: context.sha
             });
             let bump = 'patch';
             if (prs.data.length) {
@@ -127,12 +129,11 @@ jobs:
               else if (labels.includes('semver:minor')) bump = 'minor';
               else if (labels.includes('semver:patch')) bump = 'patch';
               else {
-                // lightweight CC sniff
-                const commits = await github.rest.pulls.listCommits({ owner, repo, pull_number: pr.number });
+                const commits = await github.rest.pulls.listCommits({ owner: context.repo.owner, repo: context.repo.repo, pull_number: pr.number });
                 for (const c of commits.data) {
                   const m = (c.commit.message || '');
-                  if (m.includes('BREAKING CHANGE') || /!:/m.test(m)) { bump = 'major'; break; }
-                  if (/^feat(\(|:)/m.test(m) && bump !== 'major') bump = 'minor';
+                  if (m.includes('BREAKING CHANGE') || /!:/m.test(m)) { bump='major'; break; }
+                  if (/^feat(\(|:)/m.test(m) && bump!=='major') bump='minor';
                 }
               }
             }
@@ -147,20 +148,16 @@ jobs:
             echo "next=${{ steps.validate.outputs.next }}" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-
-          last="$(git describe --tags --abbrev=0 2>/dev/null || echo 'v0.0.0')"
+          last="${{ steps.last.outputs.last }}"
           major=$(echo "$last" | sed 's/^v//' | cut -d. -f1)
           minor=$(echo "$last" | sed 's/^v//' | cut -d. -f2)
           patch=$(echo "$last" | sed 's/^v//' | cut -d. -f3)
-
           case "${{ steps.bump.outputs.bump }}" in
             major) major=$((major+1)); minor=0; patch=0 ;;
             minor) minor=$((minor+1)); patch=0 ;;
             *)     patch=$((patch+1)) ;;
           esac
-
-          next="v${major}.${minor}.${patch}"
-          echo "next=$next" >> "$GITHUB_OUTPUT"
+          echo "next=v${major}.${minor}.${patch}" >> "$GITHUB_OUTPUT"
 
       - name: Create tag
         run: |
@@ -177,6 +174,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.ver.outputs.next }}
-          name:     ${{ steps.ver.outputs.next }}
+          name: ${{ steps.ver.outputs.next }}
+          make_latest: true
           generate_release_notes: true
-
